--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 port: 3000
 lsi: false
 permalink: /:title
-# markdown: kramdown
+markdown: kramdown
 # Since GH pages override this to "true", we test this value to see if we are running locally
 safe: false
 include: [".well-known"]
@@ -11,7 +11,7 @@ kramdown:
   input: GFM
   auto_ids: true
   hard_wrap: false
-  transliterated_header_ids: true
+  # transliterated_header_ids: true
   syntax_highlighter_opts:
     disable: true
 gems:
