--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -1,3 +1,7 @@
+- name:  FFysics
+  url:   /fun/ffysics
+  descr: Fun little physics simulation with the Figma icon
+
 - name:  Messenger for Mac
   url:   https://github.com/rsms/fb-mac-messenger
   descr: Mac app around Facebook's stand-alone Messenger.com
