--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -1,6 +1,6 @@
 - name:  Neuromancer Audio
   url:   https://soundcloud.com/the-plc/sets/neuromancer-audio
-  descr: A musical companion to the seminal cyberpunk novel *Neuromancer* by William Gibson.
+  descr: A musical companion to the seminal novel by William Gibson.
 
 - name:  Valentine's Day Cards
   url:   https://www.redbubble.com/people/nickuhlig
