--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -4,7 +4,7 @@
 
 - name:  Valentine's Day Cards
   url:   https://www.redbubble.com/people/nickuhlig
-  descr: Silly chemistry-themed Valentine's Day cards that I illustrated.
+  descr: Chemistry-themed Valentine's Day cards that I illustrated.
 
 - name:  TTC Themed Ringtones
   url:   https://theplc.bandcamp.com/releases
