--- a/_config.yml
+++ b/_config.yml
@@ -5,6 +5,7 @@ markdown: kramdown
 # Since GH pages override this to "true", we test this value to see if we are running locally
 safe: false
 include: [".well-known"]
+encoding: UTF-8
 # highlighter: none
 # syntax_highlighter: none
 kramdown:
