--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -10,6 +10,6 @@
   url:   https://theplc.bandcamp.com/releases
   descr: Make your phone sound like the Toronto Transit Commission.
 
-- name: Canadian Budget Calculator
+- name: Budget Calculator
   url: https://drive.google.com/download=view?id=0Bz5r07H3CVJAbDg2Yk9PTVZRVTA
   descr: A detailed budget calculator for people living in Canada.
