--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -11,5 +11,5 @@
   descr: Make your phone sound like the Toronto Transit Commission.
 
 - name: Budget Calculator
-  url: https://drive.google.com/download=view?id=0Bz5r07H3CVJAbDg2Yk9PTVZRVTA
+  url: https://drive.google.com/open?id=0Bz5r07H3CVJAbDg2Yk9PTVZRVTA
   descr: A detailed budget calculator for people living in Canada.
