--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -1,14 +1,18 @@
 - name:  Neuromancer Audio
   url:   https://soundcloud.com/the-plc/sets/neuromancer-audio
   descr: A musical companion to the seminal novel by William Gibson.
+  
+- name:  TTC Themed Ringtones
+  url:   https://theplc.bandcamp.com/releases
+  descr: Make your phone sound like the Toronto Transit Commission.
 
 - name:  Valentine's Day Cards
   url:   https://www.redbubble.com/people/nickuhlig
   descr: Chemistry-themed Valentine's Day cards that I illustrated.
 
-- name:  TTC Themed Ringtones
-  url:   https://theplc.bandcamp.com/releases
-  descr: Make your phone sound like the Toronto Transit Commission.
+- name:  My Wedding Website
+  url:   https://perjuhlig.tumblr.com
+  descr: The tumblr-based website I made for my wedding, with original illustrations by me.
 
 - name: Budget Calculator
   url: https://drive.google.com/open?id=0Bz5r07H3CVJAbDg2Yk9PTVZRVTA
