--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -12,7 +12,7 @@
 
 - name:  My Wedding Website
   url:   https://perjuhlig.tumblr.com
-  descr: The tumblr-based website I made for my wedding, with original illustrations by me.
+  descr: Tumblr-based website I made for my wedding. Original artwork by me.
 
 - name: Budget Calculator
   url: https://drive.google.com/open?id=0Bz5r07H3CVJAbDg2Yk9PTVZRVTA
