Add ChemCOG project to projects.yml

--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -9,3 +9,7 @@
 - name:  Valentine's Day Cards
   url:   https://www.redbubble.com/people/nickuhlig
   descr: Chemistry-themed Valentine's Day cards that I illustrated.
+
+- name: ChemCOG
+  url:  https://github.com/nickuhlig/chemcog
+  descr: A small Excel tool that allows lookup of chemical identifiers, vendors, and pricing information using the PUG REST and MolPort APIs
